--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: password
-    url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://192.168.43.207:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 
 
 mybatis:
-mapper-locations: classpath:mapping/*Mapper.xml
-type-aliases-package: com.example.entity
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.zhongruan.template.**.entity
+  configuration:
+    map-underscore-to-camel-case: true
