add:file upload path config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ mybatis:
   type-aliases-package: com.zhongruan.template.**.entity
   configuration:
     map-underscore-to-camel-case: true
+
+file:
+  path:
+    html: ./file/html
+    word: ./file/word
+    xml: ./file/xml
+    ftl: ./file/ftl
