--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
     username: root
     password: password
     url: jdbc:mysql://192.168.43.207:3306/zhuangruan?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-
+  http:
+    encoding:
+      force: false
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
@@ -16,9 +18,12 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
+
+
 file:
   path:
-    html: ./file/html
-    word: ./file/word
-    xml: ./file/xml
-    ftl: ./file/ftl
+    html: d:/file/html/
+    word: d:/file/word/
+    xml: d:/file/xml/
+    ftl: d:/file/ftl/
+    zip: d:/file/zip/
