--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8081
   servlet:
     context-path: /template
+  tomcat:
+    uri-encoding: UTF-8
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -10,7 +12,9 @@ spring:
     url: jdbc:mysql://192.168.43.207:3306/zhuangruan?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
   http:
     encoding:
-      force: false
+      force: true
+      charset: utf-8
+      enabled: true
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
