--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: username
     password: zhongruan123
-    url: jdbc:mysql://127.0.0.1:3306/zhongruan?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/zhongruan?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
   http:
     encoding:
       force: true
