--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
     uri-encoding: UTF-8
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: username
     password: zhongruan123
     url: jdbc:mysql://127.0.0.1:3306/zhongruan?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
@@ -26,8 +26,8 @@ mybatis:
 
 file:
   path:
-    htm: E:/dianwen/public/
-    html: E:/dianwen/public/
+    htm: E:/apache-tomcat-7.0.105/webapps/template/WEB-INF/classes/static/
+    html: E:/apache-tomcat-7.0.105/webapps/template/WEB-INF/classes/static/
     word: E:/file/word/
     xml: E:/file/xml/
     ftl: E:/file/ftl/
